2003-08-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL: updated. MonoApplicationUnix now only takes 1 argument.
	* src/mod_mono_unix.c: removed alias matching code, added new
	DECLINE_REQUEST command and take only 1 argument, the unix socket
	file name. From now on, it lets mod-mono-server to choose if the request
	is processed or declined based on the applications configured.

2003-08-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixed apache version detection. It was looking for
	"-I/some/directory/apr.h", then failed and default to 1.3.

2003-08-10  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* doc/modmono.xml: DocBook documentation
	* src/mod_mono.c: ifde-ed out code since it only supports Apache 2 currently
	* src/Makefile.am: consistent naming
	
2003-08-04  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* configure.in: 
	* src/mod_mono_unix.c: Port to Apache 1.3

2003-08-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/Makefile.am: added mod_mono_unix.
	* src/mod_mono_unix.c: New module that communicates with an external
	process through a unix socket.

	* INSTALL: updated.

2003-04-12  Miguel de Icaza  <miguel@ximian.com>

	* src/mod_mono.c (create_application_host): Add call to
	mono_config_parse to load the default configuration file.  Maybe
	this should also be exposed to the Apache configuration file. 

2003-04-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/ApacheWorkerRequest.cs: fixed compilation.

2003-03-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: added a MapPathEvent that is fired before
	doing the normal MapPath stuff and can provide alternate mappings.

2003-03-11  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/Request.cs: We need to check for length returned equal to 0 in alias_matches
	* src/mod_mono.c: fixed bug when matching prefix that made mod_mono handle all pages even those