@@ -1,1 +1,8 @@
+September 18, 2003 - Gonzalo Paniagua
+---------------------------------------
+
+From now on, mod_mono_unix uses content_type to determine if it will process
+a request or not. You *MUST* use the AddType directive in your apache
+configuration file. More info in the INSTALL file.
+
 
