@@ -1,3 +1,11 @@
+2003-09-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* INSTALL: tell about AddType and Alias for mod_mono_unix.
+	* NEWS: updated.
+	* src/mod_mono_unix.c: check that the content type is
+	application/x-asp-net before trying to process the request and log
+	connection failures to mod-mono-server as debug.
+
 2003-08-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* INSTALL: updated. MonoApplicationUnix now only takes 1 argument.
